chore: fixed platform swiper overflow issue

--- a/src/features/components/templates/trade-platform/other-platforms/styles.module.scss
+++ b/src/features/components/templates/trade-platform/other-platforms/styles.module.scss
@@ -1,5 +1,12 @@
 @use 'features/styles/theme/theme-mixins' as *;
 
+
+.platform_section {
+    @media only screen and (min-width: 992px){
+        padding-block-start: 8rem;
+        padding-block-end: 6rem;
+    }
+}
 .slider_wrapper {
     max-inline-size: 97.5rem;
     margin-inline: auto;
@@ -11,8 +18,13 @@
     }
 
 }
+.swiper_wrapper {
+    padding-block-end: 2rem !important;
+    padding-inline: 1rem !important;
+    margin-inline: -1rem !important;
+}
 .swiper_slide {
-    height: 100% !important;
+    align-self: stretch;
 }
 .slider_button {
     background-color: transparent;
